finished final screen and storage of score now to just add local storage implementation and the highscore screen

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <title>Javascript Quiz</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 
 </head>
 
 <body class="h-100">
 
     <!-- header -->
-    <nav class="bg-light p-3" >
+    <nav class="bg-light p-3">
         <a href="./highscore.html" class="text-left h4 ml-md-3">View Highscores</a>
         <span class="float-right">Time: <span id="timer-display">0</span></span>
     </nav>
 
     <!-- start screen -->
-    <div class="container" id = "start-screen">
+    <div class="container" id="start-screen">
         <div class="row justify-content-center">
             <div class="col-sm-8 text-center">
                 <h1 class="text-center">Quiz Game</h1>
@@ -35,13 +36,31 @@
 
     <!-- Questions and answers screen -->
     <div class="container d-none" id="qa-screen">
-            <div class="row justify-content-center">
-                <div class="col-sm-8">
-                    <h3 id= "question">question?</h3>
-                    <div id="answers" ></div>
-                </div>
+        <div class="row justify-content-center">
+            <div class="col-sm-8">
+                <h3 id="question">question?</h3>
+                <div id="answers"></div>
             </div>
         </div>
+    </div>
+
+    <!-- Enter Initials Screen -->
+    <div class="container d-none" id="initials-screen">
+        <div class="row">
+            <div class="col-sm-8 text-center">
+                <h1 class="text-center">All Done!</h1>
+            </div> 
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-sm-8">
+                <span id="score">Your final scroe is <span id="final-score">0</span></span>
+                <p>Enter your initials: <input type="text"></p>
+            <!-- <div class="row justify-content-center"> -->
+                <button class="btn btn-primary buttonText text-center"><a href="highscore.html">Submit</a></button>
+            </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -52,7 +71,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    
+
     <script src="./assets/Javascript/questions.js"></script>
     <script src="./assets/Javascript/script.js"></script>
 </body>
