--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-sm-8">
-                <span id="score">Your final scroe is <span id="final-score">0</span></span>
-                <p>Enter your initials: <input type="text"></p>
+                <span id="score">Your final scroe is <span id="final-score">75</span></span>
+                <p>Enter your initials: <input type="text" id="initials"></p>
             <!-- <div class="row justify-content-center"> -->
-                <button class="btn btn-primary buttonText text-center"><a href="highscore.html">Submit</a></button>
+                <button class="btn btn-primary buttonText text-center" onclick= "nameStorage()">Submit</button>
             </div>
             </div>
         </div>
