added comments for context and began work on my README

--- a/highscore.html
+++ b/highscore.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+    <!-- This is the basic frame work that I will manipulate with my js in the 'highscores.js' file -->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-sm-8">
@@ -26,6 +27,7 @@
         </div>
     </div>
 
+    <!-- linked my js file to this html -->
     <script src="./assets/Javascript/highscore.js"></script>
 </body>
 </html>
