added actual text to the beginning of the quiz

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
             <div class="col-sm-8 text-center">
                 <h1 class="text-center">Quiz Game</h1>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt at eius impedit, in voluptate
-                    tenetur velit adipisci consectetur odio reiciendis, optio eligendi fugiat! Nisi vel expedita,
-                    dolores odit veritatis aperiam.</p>
+                <p>This quiz was created to test your ability to quickly and accurately answer basic questions about Javascript.  Answer the questions within the time alloted and your score will be recorded.</p>
+                <p>(WARNING: incorrect answer will result in a 15 second penalty</p>
                 <button class="btn btn-primary" id="start-button">Start Game</button>
             </div>
         </div>
