forgot to actually save that typo correction

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1 class="text-center">Quiz Game</h1>
                 <br>
                 <p>This quiz was created to test your ability to quickly and accurately answer basic questions about Javascript.  Answer the questions within the time alloted and your score will be recorded.</p>
-                <p>(WARNING: incorrect answer will result in a 15 second penalty</p>
+                <p>(WARNING: incorrect answer will result in a 15 second penalty)</p>
                 <button class="btn btn-primary" id="start-button">Start Game</button>
             </div>
         </div>
